style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@500&display=swap');

body {
  font-family: 'Roboto Slab', serif;
  background-color: #333;
  color: ghostwhite;
}

h1 {
  display: flex;
  justify-content: center;
  font-size: 55px;
}

h2 {
  display: flex;
  justify-content: center;
  font-size: 40px;
}

footer {
  display: flex;
  justify-content: center;
  align-items: flex-end;
  height: 100vh;
  font-size: 60px;
}

#container {
  display: flex;
  justify-content: center;
  gap: 2rem;
}

.box {
  width: 300px;
  height: 300px;
  border: 2px solid ghostwhite;
  border-radius: 20px;
  background-color: #333;
  display: flex;
  justify-content: center;
  align-items: center;
  cursor: pointer;
}

#button-container {
  width: 100%;
  display: flex;
  justify-content: center;
}

.btn {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100px;
  width: 200px;
  font-size: 30px;
  border-radius: 10px;
  background-color: #333;
  color: ghostwhite;
}

